# fastapi-tutorial

./: README.md  pyproject.toml
0-initial-project-setup/src/: main.py
2-path-params/src/: main.py
